--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.7"
     },
     "dependencies": {
+        "vue-meta": "^1.6.0",
         "vue-router": "^3.0.2"
     }
 }
