--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bootstrap": "^4.3.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
+        "laravel-elixir-vue-2": "^0.3.0",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
         "node-sass": "^4.11.0",
