--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.6.7"
     },
     "dependencies": {
+        "vue-loader": "^14.2.2",
         "vue-meta": "^1.6.0",
         "vue-paginate": "^3.6.0",
         "vue-router": "^3.0.2"
