--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
+        "nutsweb/laravel-prerender": "^2.0",
         "unisharp/laravel-filemanager": "~1.8"
     },
     "require-dev": {
